# openmneme

./: .gitignore  LICENSE  README.md  index.js  package.json  pyproject.toml
.github/workflows/: npm-publish.yml  publish.yml  test.yml
js/: README.md  index.js  package.json  plan-mode.js  reviewer-gate.js  rlm.js  slash-skill.js  test-smoke.mjs
openmneme/: __init__.py  plan_mode.py  reviewer_gate.py  rlm.py  slash_skill.py
tests/: test_smoke.py
