[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openmneme"
version = "0.1.0"
description = "Primitives for local-first AI agents — slash-skill, plan-mode, reviewer-gate, RLM."
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [{name = "Alan", email = "alan@example.com"}]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/alanpaul1969/openmneme"
Issues = "https://github.com/alanpaul1969/openmneme/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["openmneme*"]
